@@ -16,11 +16,15 @@ boost_lib_math_long_double := math_c99l math_tr1l
 boost_lib_serialization := serialization wserialization
 boost_lib_test := prg_exec_monitor test_exec_monitor unit_test_framework
 
-pyversions = $(shell pyversions -rv) $(shell py3versions -rv)
+py2versions = $(shell pyversions -rv)
+py3versions = $(shell py3versions -rv)
+pyversions = $(py2versions) $(py3versions)
 
 # These are special cases for suffixes.  Generally come from --python-buildid, so begin with a dash.
-boost_suffixes_python := $(addprefix -py,$(subst .,,$(pyversions)))
+boost_suffixes_python := $(addprefix 3-py,$(subst .,,$(py3versions))) $(addprefix -py,$(subst .,,$(py2versions)))
 boost_suffixes_mpi-python := $(boost_suffixes_python)
+
+py3default = $(subst .,,$(shell py3versions -dv))
 
 # Files that are generated by filtering a template
 filtered_files = 
@@ -135,6 +139,20 @@ override_dh_install:
 	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
 	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python-py27.so \
 	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python.so
+
+	dh_link -plibboost-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3-py$(py3default).a \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3.a
+	dh_link -plibboost-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3-py$(py3default).so \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3.so
+
+	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3-py$(py3default).a \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3.a
+	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3-py$(py3default).so \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3.so
 
 	dh_installexamples -plibboost$(PKGVERSION)-doc debian/boost-build-examples
 	mkdir -p $(exampledir)
