@@ -1,8 +1,12 @@
 boost1.65.1 (1.65.1+dfsg-1) UNRELEASED; urgency=medium
 
+  [ Steve M. Robbins ]
   * New upstream.
   * Remove "Force use g++-6"
   * patches/chrono-duration.patch: Remove.  Obsoleted by upstream changes.
+
+  [ Dimitri John Ledkov ]
+  * Fixup py3 suffixes and symlinks.
 
  -- Steve M. Robbins <smr@debian.org>  Mon, 25 Sep 2017 21:44:44 -0500
 
